# Dictionary

./: .gitignore  README.md  db.sqlite3  definer.py  main.py  manage.py  notes.md  pyproject.toml  test.py  variant.py  word.py
dictionary/: apps.py  forms.py  models.py  urls.py  views.py  word.py
dictionary/migrations/: 0001_initial.py  0002_alter_vocabterm_word_delete_word.py  0003_remove_vocabterm_date_added.py
dictionary/static/css/: main.css
dictionary/templates/dictionary/: add_term.html  base.html  error.html  home.html  result.html
dictionary/templates/registration/: login.html  sign_up.html
static/styles/: styles.css
templates/: base.html  error.html  result.html
tests/: test.py
vocab_voyager/: app.py  asgi.py  main.py  settings.py  urls.py  word.py  wsgi.py
vocab_voyager/templates/: base.html  error.html
