[tool.poetry]
name = "vocab-voyager"
version = "0.1.0"
description = ""
authors = ["Krish Shah <shahkrish2016@gmail.com>"]
readme = "README.md"
packages = [{include = "vocab_voyager"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
flask = "^3.0.0"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
